main.bicep
param virtualNetworks_vnet_hub_name string = 'vnet_hub'
param registries_acrshit_name string = 'acrshit'
param flexibleServers_db_metrics_name string = 'db-metrics'
param containerGroups_acishit_name string = 'acishit'
param virtualNetworks_vnet_spoke_db_app_name string = 'vnet_spoke_db_app'
param networkSecurityGroups_nsg_database_name string = 'nsg-database'

resource containerGroups_acishit_name_resource 'Microsoft.ContainerInstance/containerGroups@2024-11-01-preview' = {
  name: containerGroups_acishit_name
  location: 'spaincentral'
  properties: {
    sku: 'Standard'
    containers: [
      {
        name: containerGroups_acishit_name
        properties: {
          image: 'acrshit.azurecr.io/api:latest'
          ports: [
            {
              protocol: 'TCP'
              port: 8000
            }
          ]
          environmentVariables: []
          resources: {
            requests: {
              memoryInGB: json('1.5')
              cpu: json('1')
            }
          }
        }
      }
    ]
    initContainers: []
    imageRegistryCredentials: [
      {
        server: 'acrshit.azurecr.io'
        username: 'acrshit'
      }
    ]
    restartPolicy: 'Never'
    ipAddress: {
      ports: [
        {
          protocol: 'TCP'
          port: 8000
        }
      ]
      type: 'Public'
      dnsNameLabel: containerGroups_acishit_name
      autoGeneratedDomainNameLabelScope: 'ResourceGroupReuse'
    }
    osType: 'Linux'
  }
}

resource registries_acrshit_name_resource 'Microsoft.ContainerRegistry/registries@2025-05-01-preview' = {
  name: registries_acrshit_name
  location: 'spaincentral'
  tags: {
    environment: 'development'
    owner: 'wassim'
    project: 'cs2-in-ncb'
  }
  sku: {
    name: 'Basic'
    tier: 'Basic'
  }
  properties: {
    adminUserEnabled: true
    policies: {
      quarantinePolicy: {
        status: 'disabled'
      }
      trustPolicy: {
        type: 'Notary'
        status: 'disabled'
      }
      retentionPolicy: {
        days: 7
        status: 'disabled'
      }
      exportPolicy: {
        status: 'enabled'
      }
      azureADAuthenticationAsArmPolicy: {
        status: 'enabled'
      }
      softDeletePolicy: {
        retentionDays: 7
        status: 'disabled'
      }
    }
    encryption: {
      status: 'disabled'
    }
    dataEndpointEnabled: false
    publicNetworkAccess: 'Enabled'
    networkRuleBypassOptions: 'AzureServices'
    networkRuleBypassAllowedForTasks: false
    zoneRedundancy: 'Disabled'
    anonymousPullEnabled: false
    metadataSearch: 'Disabled'
    roleAssignmentMode: 'LegacyRegistryPermissions'
    autoGeneratedDomainNameLabelScope: 'Unsecure'
  }
}

resource flexibleServers_db_metrics_name_resource 'Microsoft.DBforMySQL/flexibleServers@2024-10-01-preview' = {
  name: flexibleServers_db_metrics_name
  location: 'Spain Central'
  tags: {
    environment: 'development'
    owner: 'wassim'
    project: 'cs2-in-ncb'
  }
  sku: {
    name: 'Standard_B1ms'
    tier: 'Burstable'
  }
  properties: {
    administratorLogin: 'dblogin1'
    administratorLoginPassword: dbPassword
    storage: {
      storageSizeGB: 20
      iops: 360
      autoGrow: 'Disabled'
      autoIoScaling: 'Enabled'
      logOnDisk: 'Disabled'
      storageRedundancy: 'LocalRedundancy'
    }
    version: '8.0.21'
    maintenanceWindow: {
      customWindow: 'Disabled'
      dayOfWeek: 0
      startHour: 0
      startMinute: 0
    }
    replicationRole: 'None'
    network: {
      publicNetworkAccess: 'Enabled'
    }
    backup: {
      backupRetentionDays: 1
      backupIntervalHours: 24
      geoRedundantBackup: 'Disabled'
    }
    highAvailability: {
      mode: 'Disabled'
    }
    maintenancePolicy: {
      patchStrategy: 'VirtualCanary'
    }
    databasePort: 3306
  }
}

resource networkSecurityGroups_nsg_database_name_resource 'Microsoft.Network/networkSecurityGroups@2024-07-01' = {
  name: networkSecurityGroups_nsg_database_name
  location: 'spaincentral'
  tags: {
    environment: 'development'
    owner: 'wassim'
    project: 'cs2-in-ncb'
  }
  properties: {
    securityRules: [
      {
        name: 'allow-db-port'
        id: networkSecurityGroups_nsg_database_name_allow_db_port.id
        type: 'Microsoft.Network/networkSecurityGroups/securityRules'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRange: '3306'
          sourceAddressPrefix: '10.1.0.0/16'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 100
          direction: 'Inbound'
          sourcePortRanges: []
          destinationPortRanges: []
          sourceAddressPrefixes: []
          destinationAddressPrefixes: []
        }
      }
    ]
  }
}

resource registries_acrshit_name_repositories_admin 'Microsoft.ContainerRegistry/registries/scopeMaps@2025-05-01-preview' = {
  parent: registries_acrshit_name_resource
  name: '_repositories_admin'
  properties: {
    description: 'Can perform all read, write and delete operations on the registry'
    actions: [
      'repositories/*/metadata/read'
      'repositories/*/metadata/write'
      'repositories/*/content/read'
      'repositories/*/content/write'
      'repositories/*/content/delete'
    ]
  }
}

resource registries_acrshit_name_repositories_pull 'Microsoft.ContainerRegistry/registries/scopeMaps@2025-05-01-preview' = {
  parent: registries_acrshit_name_resource
  name: '_repositories_pull'
  properties: {
    description: 'Can pull any repository of the registry'
    actions: [
      'repositories/*/content/read'
    ]
  }
}

resource registries_acrshit_name_repositories_pull_metadata_read 'Microsoft.ContainerRegistry/registries/scopeMaps@2025-05-01-preview' = {
  parent: registries_acrshit_name_resource
  name: '_repositories_pull_metadata_read'
  properties: {
    description: 'Can perform all read operations on the registry'
    actions: [
      'repositories/*/content/read'
      'repositories/*/metadata/read'
    ]
  }
}

resource registries_acrshit_name_repositories_push 'Microsoft.ContainerRegistry/registries/scopeMaps@2025-05-01-preview' = {
  parent: registries_acrshit_name_resource
  name: '_repositories_push'
  properties: {
    description: 'Can push to any repository of the registry'
    actions: [
      'repositories/*/content/read'
      'repositories/*/content/write'
    ]
  }
}

resource registries_acrshit_name_repositories_push_metadata_write 'Microsoft.ContainerRegistry/registries/scopeMaps@2025-05-01-preview' = {
  parent: registries_acrshit_name_resource
  name: '_repositories_push_metadata_write'
  properties: {
    description: 'Can perform all read and write operations on the registry'
    actions: [
      'repositories/*/metadata/read'
      'repositories/*/metadata/write'
      'repositories/*/content/read'
      'repositories/*/content/write'
    ]
  }
}

resource flexibleServers_db_metrics_name_Default 'Microsoft.DBforMySQL/flexibleServers/advancedThreatProtectionSettings@2024-10-01-preview' = {
  parent: flexibleServers_db_metrics_name_resource
  name: 'Default'
  properties: {
    state: 'Disabled'
  }
}

resource flexibleServers_db_metrics_name_AllowAllAzureServicesAndResourcesWithinAzureIps_2025_11_6_21_49_49 'Microsoft.DBforMySQL/flexibleServers/firewallRules@2023-12-30' = {
  parent: flexibleServers_db_metrics_name_resource
  name: 'AllowAllAzureServicesAndResourcesWithinAzureIps_2025-11-6_21-49-49'
  properties: {
    startIpAddress: '0.0.0.0'
    endIpAddress: '0.0.0.0'
  }
}

resource flexibleServers_db_metrics_name_database_address 'Microsoft.DBforMySQL/flexibleServers/firewallRules@2023-12-30' = {
  parent: flexibleServers_db_metrics_name_resource
  name: 'database-address'
  properties: {
    startIpAddress: '84.29.3.19'
    endIpAddress: '84.29.3.19'
  }
}

resource networkSecurityGroups_nsg_database_name_allow_db_port 'Microsoft.Network/networkSecurityGroups/securityRules@2024-07-01' = {
  name: '${networkSecurityGroups_nsg_database_name}/allow-db-port'
  properties: {
    protocol: '*'
    sourcePortRange: '*'
    destinationPortRange: '3306'
    sourceAddressPrefix: '10.1.0.0/16'
    destinationAddressPrefix: '*'
    access: 'Allow'
    priority: 100
    direction: 'Inbound'
    sourcePortRanges: []
    destinationPortRanges: []
    sourceAddressPrefixes: []
    destinationAddressPrefixes: []
  }
  dependsOn: [
    networkSecurityGroups_nsg_database_name_resource
  ]
}

resource virtualNetworks_vnet_hub_name_resource 'Microsoft.Network/virtualNetworks@2024-07-01' = {
  name: virtualNetworks_vnet_hub_name
  location: 'spaincentral'
  tags: {
    environment: 'development'
    owner: 'wassim'
    project: 'cs2-in-ncb'
  }
  properties: {
    addressSpace: {
      addressPrefixes: [
        '10.10.0.0/16'
      ]
    }
    encryption: {
      enabled: false
      enforcement: 'AllowUnencrypted'
    }
    privateEndpointVNetPolicies: 'Disabled'
    subnets: [
      {
        name: 'GatewaySubnet'
        id: virtualNetworks_vnet_hub_name_GatewaySubnet.id
        properties: {
          addressPrefixes: [
            '10.10.0.0/24'
          ]
          delegations: []
          privateEndpointNetworkPolicies: 'Disabled'
          privateLinkServiceNetworkPolicies: 'Enabled'
        }
        type: 'Microsoft.Network/virtualNetworks/subnets'
      }
      {
        name: 'container-ping-test'
        id: virtualNetworks_vnet_hub_name_container_ping_test.id
        properties: {
          addressPrefixes: [
            '10.10.2.0/24'
          ]
          delegations: [
            {
              name: 'ACIDelegationService'
              id: '${virtualNetworks_vnet_hub_name_container_ping_test.id}/delegations/ACIDelegationService'
              properties: {
                serviceName: 'Microsoft.ContainerInstance/containerGroups'
              }
              type: 'Microsoft.Network/virtualNetworks/subnets/delegations'
            }
          ]
          privateEndpointNetworkPolicies: 'Disabled'
          privateLinkServiceNetworkPolicies: 'Enabled'
        }
        type: 'Microsoft.Network/virtualNetworks/subnets'
      }
    ]
    virtualNetworkPeerings: [
      {
        name: 'peering-spoke2hub'
        id: virtualNetworks_vnet_hub_name_peering_spoke2hub.id
        properties: {
          peeringState: 'Connected'
          peeringSyncLevel: 'FullyInSync'
          remoteVirtualNetwork: {
            id: virtualNetworks_vnet_spoke_db_app_name_resource.id
          }
          allowVirtualNetworkAccess: true
          allowForwardedTraffic: true
          allowGatewayTransit: true
          useRemoteGateways: false
          doNotVerifyRemoteGateways: false
          peerCompleteVnets: true
          remoteAddressSpace: {
            addressPrefixes: [
              '10.20.0.0/16'
            ]
          }
          remoteVirtualNetworkAddressSpace: {
            addressPrefixes: [
              '10.20.0.0/16'
            ]
          }
        }
        type: 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings'
      }
    ]
    enableDdosProtection: false
  }
}

resource virtualNetworks_vnet_spoke_db_app_name_app_subnet 'Microsoft.Network/virtualNetworks/subnets@2024-07-01' = {
  name: '${virtualNetworks_vnet_spoke_db_app_name}/app-subnet'
  properties: {
    addressPrefixes: [
      '10.20.2.0/24'
    ]
    delegations: []
    privateEndpointNetworkPolicies: 'Disabled'
    privateLinkServiceNetworkPolicies: 'Enabled'
  }
  dependsOn: [
    virtualNetworks_vnet_spoke_db_app_name_resource
  ]
}

resource virtualNetworks_vnet_hub_name_container_ping_test 'Microsoft.Network/virtualNetworks/subnets@2024-07-01' = {
  name: '${virtualNetworks_vnet_hub_name}/container-ping-test'
  properties: {
    addressPrefixes: [
      '10.10.2.0/24'
    ]
    delegations: [
      {
        name: 'ACIDelegationService'
        id: '${virtualNetworks_vnet_hub_name_container_ping_test.id}/delegations/ACIDelegationService'
        properties: {
          serviceName: 'Microsoft.ContainerInstance/containerGroups'
        }
        type: 'Microsoft.Network/virtualNetworks/subnets/delegations'
      }
    ]
    privateEndpointNetworkPolicies: 'Disabled'
    privateLinkServiceNetworkPolicies: 'Enabled'
  }
  dependsOn: [
    virtualNetworks_vnet_hub_name_resource
  ]
}

resource virtualNetworks_vnet_hub_name_GatewaySubnet 'Microsoft.Network/virtualNetworks/subnets@2024-07-01' = {
  name: '${virtualNetworks_vnet_hub_name}/GatewaySubnet'
  properties: {
    addressPrefixes: [
      '10.10.0.0/24'
    ]
    delegations: []
    privateEndpointNetworkPolicies: 'Disabled'
    privateLinkServiceNetworkPolicies: 'Enabled'
  }
  dependsOn: [
    virtualNetworks_vnet_hub_name_resource
  ]
}

resource virtualNetworks_vnet_spoke_db_app_name_resource 'Microsoft.Network/virtualNetworks@2024-07-01' = {
  name: virtualNetworks_vnet_spoke_db_app_name
  location: 'spaincentral'
  tags: {
    environment: 'development'
    owner: 'wassim'
    project: 'cs2-in-ncb'
  }
  properties: {
    addressSpace: {
      addressPrefixes: [
        '10.20.0.0/16'
      ]
    }
    encryption: {
      enabled: false
      enforcement: 'AllowUnencrypted'
    }
    privateEndpointVNetPolicies: 'Disabled'
    subnets: [
      {
        name: 'app-subnet'
        id: virtualNetworks_vnet_spoke_db_app_name_app_subnet.id
        properties: {
          addressPrefixes: [
            '10.20.2.0/24'
          ]
          delegations: []
          privateEndpointNetworkPolicies: 'Disabled'
          privateLinkServiceNetworkPolicies: 'Enabled'
        }
        type: 'Microsoft.Network/virtualNetworks/subnets'
      }
      {
        name: 'database-subnet'
        id: virtualNetworks_vnet_spoke_db_app_name_database_subnet.id
        properties: {
          addressPrefixes: [
            '10.20.1.0/24'
          ]
          networkSecurityGroup: {
            id: networkSecurityGroups_nsg_database_name_resource.id
          }
          delegations: []
          privateEndpointNetworkPolicies: 'Disabled'
          privateLinkServiceNetworkPolicies: 'Enabled'
          defaultOutboundAccess: false
        }
        type: 'Microsoft.Network/virtualNetworks/subnets'
      }
    ]
    virtualNetworkPeerings: [
      {
        name: 'peering-hub2spoke'
        id: virtualNetworks_vnet_spoke_db_app_name_peering_hub2spoke.id
        properties: {
          peeringState: 'Connected'
          peeringSyncLevel: 'FullyInSync'
          remoteVirtualNetwork: {
            id: virtualNetworks_vnet_hub_name_resource.id
          }
          allowVirtualNetworkAccess: true
          allowForwardedTraffic: true
          allowGatewayTransit: false
          useRemoteGateways: true
          doNotVerifyRemoteGateways: false
          peerCompleteVnets: true
          remoteAddressSpace: {
            addressPrefixes: [
              '10.10.0.0/16'
            ]
          }
          remoteVirtualNetworkAddressSpace: {
            addressPrefixes: [
              '10.10.0.0/16'
            ]
          }
        }
        type: 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings'
      }
    ]
    enableDdosProtection: false
  }
}

resource virtualNetworks_vnet_spoke_db_app_name_database_subnet 'Microsoft.Network/virtualNetworks/subnets@2024-07-01' = {
  name: '${virtualNetworks_vnet_spoke_db_app_name}/database-subnet'
  properties: {
    addressPrefixes: [
      '10.20.1.0/24'
    ]
    networkSecurityGroup: {
      id: networkSecurityGroups_nsg_database_name_resource.id
    }
    delegations: []
    privateEndpointNetworkPolicies: 'Disabled'
    privateLinkServiceNetworkPolicies: 'Enabled'
    defaultOutboundAccess: false
  }
  dependsOn: [
    virtualNetworks_vnet_spoke_db_app_name_resource
  ]
}

resource virtualNetworks_vnet_spoke_db_app_name_peering_hub2spoke 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings@2024-07-01' = {
  name: '${virtualNetworks_vnet_spoke_db_app_name}/peering-hub2spoke'
  properties: {
    peeringState: 'Connected'
    peeringSyncLevel: 'FullyInSync'
    remoteVirtualNetwork: {
      id: virtualNetworks_vnet_hub_name_resource.id
    }
    allowVirtualNetworkAccess: true
    allowForwardedTraffic: true
    allowGatewayTransit: false
    useRemoteGateways: true
    doNotVerifyRemoteGateways: false
    peerCompleteVnets: true
    remoteAddressSpace: {
      addressPrefixes: [
        '10.10.0.0/16'
      ]
    }
    remoteVirtualNetworkAddressSpace: {
      addressPrefixes: [
        '10.10.0.0/16'
      ]
    }
  }
  dependsOn: [
    virtualNetworks_vnet_spoke_db_app_name_resource
  ]
}

resource virtualNetworks_vnet_hub_name_peering_spoke2hub 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings@2024-07-01' = {
  name: '${virtualNetworks_vnet_hub_name}/peering-spoke2hub'
  properties: {
    peeringState: 'Connected'
    peeringSyncLevel: 'FullyInSync'
    remoteVirtualNetwork: {
      id: virtualNetworks_vnet_spoke_db_app_name_resource.id
    }
    allowVirtualNetworkAccess: true
    allowForwardedTraffic: true
    allowGatewayTransit: true
    useRemoteGateways: false
    doNotVerifyRemoteGateways: false
    peerCompleteVnets: true
    remoteAddressSpace: {
      addressPrefixes: [
        '10.20.0.0/16'
      ]
    }
    remoteVirtualNetworkAddressSpace: {
      addressPrefixes: [
        '10.20.0.0/16'
      ]
    }
  }
  dependsOn: [
    virtualNetworks_vnet_hub_name_resource
  ]
}
